# docs2md

./: .gitignore  README.md  config.yml.example  docs2md.py  pyproject.toml
src/: __init__.py  adjust_markdown.py  config.py  main.py
src/adjustments/: __init__.py  base.py  content_adjustments.py  table_adjustments.py
src/utils/: __init__.py  logging_utils.py  markdown_base.py  path_utils.py
